name:                yaml-dir
version:             0.1.0.0
synopsis:            Directories as YAML objects
description:         A small convenience library that reads in directory
                     structures and exposes them as YAML values. Three
                     sets of functions are supplied, depending on whether
                     the files within the directory structure should be
                     treated as containing YAML values, raw text, or
                     possibly either depending on file extension.

                     The intent of this package is to allow for
                     configuration or data directories to be used in lieu
                     of monolithic configuration files. The functions
                     contained here can be used to parse either files or
                     directories, and the choice of which to use can be
                     transparent to the application author.
license:             BSD-3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gdritter@galois.com
copyright:           ©2015 Getty Ritter
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Yaml.Dir
  other-extensions:    MultiWayIf, ParallelListComp
  build-depends:       base >=4.7 && <4.8,
                       unordered-containers >= 0.2 && <= 0.3,
                       text >=1.1 && <1.2,
                       yaml >=0.8 && <0.9,
                       directory >=1.2 && <1.3,
                       filepath >= 1.0 && <1.4
  default-language:    Haskell2010
